--- a/css/style.css
+++ b/css/style.css
@@ -274,34 +274,84 @@ body {
     font-size: 6rem;
     font-weight: 100; }
 
-.form__group {
-  font: inherit;
-  font-size: 1.6rem; }
+.form__group:not(:last-child) {
+  margin-bottom: 2rem; }
 
 .form__input {
+  font-family: inherit;
+  font-size: 1.5rem;
   display: block;
   padding: 1.5rem 2rem;
   border-radius: 2px;
+  background-color: rgba(255, 255, 255, 0.9);
   border: none;
   width: 90%;
-  border-bottom: 3px solid transparent;
-  color: inherit; }
+  border-bottom: 3px solid transparent; }
+  .form__input:focus {
+    outline: none;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+    border-bottom: 3px solid #28b485; }
+  .form__input:focus:invalid {
+    border-bottom: 3px solid #ff7730; }
+  .form__input::-webkit-input-placeholder {
+    color: #999; }
 
 .form__label {
-  margin-top: 1rem; }
+  display: block;
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-top: .7rem;
+  margin-left: 2rem;
+  color: inherit;
+  transition: all .3s; }
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem); }
+
+.form__radio--group {
+  width: 49%;
+  display: inline-block; }
+
+.form__radio--label {
+  font-size: 1.6rem;
+  position: relative;
+  padding-left: 4rem; }
+
+.form__radio--bottom {
+  height: 3rem;
+  width: 3rem;
+  border-radius: 50%;
+  border: 5px solid #55c57a;
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: -.4rem; }
+  .form__radio--bottom::after {
+    content: "";
+    display: block;
+    height: 1.3rem;
+    width: 1.3rem;
+    border-radius: 50%;
+    background-color: #55c57a;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
 
 .book {
   height: 50rem;
   margin: 0 auto;
   border-radius: 3px;
   box-shadow: 0 1.4rem 4rem rgba(0, 0, 0, 0.2);
-  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 50%, rgba(255, 255, 255, 0.9) 0%, transparent 50%), url(../../img/nat-10.jpg);
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 51%, rgba(255, 255, 255, 0.9) 0%, transparent 50%), url(../../img/nat-10.jpg);
   background-size: 100%; }
   .book__form {
     height: 50rem;
     width: 50%;
     padding-left: 7rem;
-    padding-top: 10rem; }
+    padding-top: 7rem; }
 
 .story {
   width: 75%;
