--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -2,23 +2,99 @@
 .form{
    
     
-    &__group{
-        font: inherit;
-        font-size: $default-font-size;
+    &__group:not(:last-child){
+        margin-bottom: 2rem;
+        
     }
     &__input{
+        font-family: inherit;
+        font-size: 1.5rem;
         display: block;
         padding: 1.5rem 2rem;
         border-radius: 2px;
+        background-color: rgba($color-white, 0.9);
         border:none;
         width: 90%;
         border-bottom: 3px solid transparent;
-        color: inherit;
-    }
+       
+        &:focus{
+            outline: none;
+            box-shadow: 0 1rem 2rem rgba($color-black, .1);
+            border-bottom: 3px solid $color-primary-dark;
+            
+        }
+        &:focus:invalid{
+            border-bottom: 3px solid $color-secondary-dark;
+        }
     
-    &__label{
-        margin-top: 1rem;
+        &::-webkit-input-placeholder{
+            color: $color-grey-dark-2;
+        }
     }
 
+    &__label{
+        display: block;
+        font-size: 1.2rem;
+        font-weight: 700;
+        margin-top: .7rem;
+        margin-left: 2rem;
+        color: inherit;
+        transition: all .3s;
+    }
+
+    &__input:placeholder-shown + &__label{
+        opacity: 0;
+        visibility: hidden;
+        transform: translateY(-4rem);
+    }
+&__radio--group{
+    width: 49%;
+    display: inline-block;
     
+}
+
+&__radio--label{
+    font-size: $default-font-size;
+    position: relative;
+    padding-left: 4rem;
+}
+&__radio--bottom{
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
+    border: 5px solid $color-primary;
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    top: -.4rem;
+   
+
+    &::after{
+        content: "";
+        display: block;
+        height: 1.3rem;
+        width: 1.3rem;
+        border-radius: 50%;
+        background-color: $color-primary;
+        position: absolute;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+}
+
+
+    // &__radio--bottom{
+    //     height: 3rem;
+    //     width: 3rem;
+    //     border: 5px solid #55c57a;
+    //     border-radius: 50%;
+    //     display: inline-block;
+    //     position: absolute;
+    //     left: 0;
+    //     top: -.4rem;
+    // }
+    
+
   }
