--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -52,11 +52,16 @@
     display: inline-block;
     
 }
+&__radio--input{
+    display: none;
+    visibility: none;
+}
 
 &__radio--label{
     font-size: $default-font-size;
     position: relative;
     padding-left: 4rem;
+    cursor: pointer;
 }
 &__radio--bottom{
     height: 3rem;
@@ -80,8 +85,13 @@
         top:50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        opacity: 0;
     }
+    
+}
 
+&__radio--input:checked ~ &__radio--label &__radio--bottom::after{
+    opacity: 1;
 }
 
 
