--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,5 +1,6 @@
-.u-center-text{text-align: center;}
-.u-margin-bottom-big { margin-bottom: 8rem;}
-.u-margin-bottom-small{margin-bottom: 1.5rem;}
-.u-margin-bottom-medium{margin-bottom: 4rem;}
-.u-margin-top-10{margin-top: 10rem;}
+.u-center-text{text-align: center !important; }
+.u-margin-bottom-big { margin-bottom: 8rem !important;}
+.u-margin-bottom-small{margin-bottom: 1.5rem !important;}
+.u-margin-bottom-medium{margin-bottom: 4rem !important;}
+.u-margin-top-10{margin-top: 10rem !important;}
+.u-margin-top-small{margin-top: 2rem !important;}
