--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,5 +1,6 @@
 .btn {
 
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -10,6 +11,11 @@
         transition: all .2s;
         position: relative;
         font-size: $default-font-size;
+       
+        //changes for the button element from form
+        border: none;
+        cursor: pointer;
+        
     }
 
     &--white {
@@ -38,7 +44,8 @@
         }
     }
 
-    &:active {
+    &:active, &:focus{
+        outline: none;
         transform: translateY(-0.1rem);
         box-shadow: 0 .5rem 1rem rgba($color-black, .2);
     }
