--- a/css/style.css
+++ b/css/style.css
@@ -495,6 +495,66 @@ body {
     transform: translate(-50%, -50%);
     text-align: center; }
 
+.navigation {
+  display: block; }
+  .navigation__checkbox {
+    display: none; }
+  .navigation__botton {
+    height: 7rem;
+    width: 7rem;
+    background-color: #fff;
+    border-radius: 50%;
+    box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.8);
+    display: inline-block;
+    position: fixed;
+    top: 6rem;
+    right: 6rem;
+    z-index: 1055; }
+  .navigation__background {
+    background-color: #7ed56f;
+    display: inline-block;
+    height: 6.5rem;
+    width: 6.5rem;
+    border-radius: 50%;
+    background-image: radial-gradient(rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8));
+    position: fixed;
+    top: 6.5rem;
+    right: 6.5rem;
+    z-index: 1000;
+    transition: all 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
+  .navigation__checkbox:checked ~ .navigation__background {
+    transform: scale(80); }
+  .navigation__nav {
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 0%;
+    z-index: 1020;
+    opacity: 0;
+    transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    visibility: hidden; }
+  .navigation__list {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    text-align: center;
+    list-style: none; }
+  .navigation__item {
+    margin: 1rem 2rem; }
+  .navigation__link {
+    display: inline-block;
+    text-decoration: none;
+    font-size: 4rem;
+    font-weight: 300;
+    color: #fff; }
+  .navigation__checkbox:checked ~ .navigation__nav {
+    opacity: 1;
+    width: 100%;
+    visibility: visible; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
