--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,6 +25,7 @@ Dark green: #28b485
 
 
 @import "layout/header";
+@import "layout/navigation";
 @import "layout/grid";
 @import "layout/footer";
 
