--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -56,7 +56,7 @@
             z-index: 1020;
             opacity: 0;
             transition:  all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55) //cubic is for animation timing and delay;
-            visibility: hidden;
+           
         }
         &__list{
             position:absolute;
@@ -82,13 +82,40 @@
 
         }
         &__link{
-            display: inline-block;
-            text-decoration: none;
-            font-size: 4rem;
-            font-weight: 300;
-            color: $color-white;
            
-            
+            &,
+            &:link,
+            &:visited{
+
+                display: inline-block;
+                text-decoration: none;
+                font-size: 4rem;
+                font-weight: 300;
+                color: $color-white;
+                background-image: linear-gradient(102deg,transparent 0%, transparent 50%, $color-white 50%);
+                background-size: 220%;
+                transition: all .4s;
+
+                span{
+                    margin-right: 1.5rem;
+                    display: inline-block;
+                }
+                
+            }
+           
+
+
+
+            &:hover,
+            &:active{
+                color: rgba($color-primary-dark, 0.8);
+                background-position: 100%;
+                transform: translateX(3rem);
+            }
+
+
+
+        
 
            
         
