--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -19,11 +19,71 @@
             top:6rem;
             right:6rem;
             z-index: 1055;
+            text-align: center;
+            
 
         }
         &__icon{
+          
+            &,
+            &::before,
+            &::after{
 
+                width: 3rem;
+                height: 2px;
+                background-color: #333;
+                display: inline-block;
+    
+            }
+            &{
+                margin-top: 3.5rem;
+                position:relative;
+                transition: all .3s;
+            }
+            &::before{
+                content: "";
+                position: absolute;
+                top: -0.8rem;
+                left: 0;
+                transition: all .3s;
+            }
+            &::after{
+                content: "";
+                position:absolute;
+                top: 0.8rem;
+                left: 0;
+                transition: all .3s ;
+            }
+           
+        } 
+            
+        &__checkbox:hover ~ &__botton &__icon::before{
+            position:absolute;
+            top: -1rem;
+        }   
+
+        &__checkbox:hover ~ &__botton &__icon::after{
+            position:absolute;
+            top:1rem;
+        }   
+        
+        &__checkbox:checked ~ &__botton &__icon{
+           background-color: transparent;
         }
+        &__checkbox:checked ~ &__botton &__icon::before{
+            position:absolute;
+            top:0;
+            left: 0;
+            
+            transform: rotate(225deg);
+         }
+         &__checkbox:checked ~ &__botton &__icon::after{
+            position:absolute;
+            top:0;
+            left: 0;
+            transform: rotate(-225deg);
+         }
+        
         &__background{
             background-color: $color-primary-light;
             display: inline-block;
@@ -121,6 +181,7 @@
         
             
         }
+    }
 
+    
 
-}
