creating pop-up section
almost done with pop up section! worked with display:table function and column-count with the paragraph.

--- a/css/style.css
+++ b/css/style.css
@@ -670,6 +670,47 @@ body {
     width: 80%;
     float: right; }
 
+.section--popup {
+  height: 100vh;
+  background-color: rgba(51, 51, 51, 0.8);
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999; }
+
+.popup__box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 75%;
+  display: table;
+  overflow: hidden;
+  background-color: #fff; }
+  .popup__box--left {
+    width: 33.333333%;
+    display: table-cell; }
+  .popup__box--right {
+    width: 66.6666667%;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 3rem 5rem; }
+
+.popup__img {
+  display: block;
+  width: 100%; }
+
+.popup__text {
+  font-size: 1.4rem;
+  margin-bottom: 4rem;
+  -moz-column-count: 2;
+  -moz-column-gap: 4rem;
+  -moz-column-rule: 1px solid #eee;
+  column-count: 2;
+  column-gap: 4rem;
+  column-rule: 1px solid #eee; }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
