--- a/sass/main.scss
+++ b/sass/main.scss
@@ -28,6 +28,7 @@ Dark green: #28b485
 @import "layout/navigation";
 @import "layout/grid";
 @import "layout/footer";
+@import "layout/_popup";
 
 @import "pages/home";
 
