--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -5,3 +5,43 @@
         clear:both;
     }
 }
+
+//MEDIA QUERY MANAGER
+/*
+0-600px: phone
+600-900px: tablet portrait
+900-1200px: tablet landscape
+[1200- 1800] is where our normal styles apply
+1800px +: Big desktop 
+
+
+notes: this is for destop size media query. 
+
+$breakpoint arguement choices: 
+-phone
+-tab-port
+-tab-land
+-big-desktop 
+
+
+ORDER: Base + typography > general layout + grid > page layout > components
+*/
+
+//1 em = 16px 
+
+@mixin respond($breakpoint){
+
+    @if $breakpoint == phone {
+        @media (max-width: 37.5em){@content}; //600/16 = 37.5 em 
+    }
+    @if $breakpoint == tab-port{
+        @media (max-width: 56.25em){@content}; //900px
+    }
+    @if $breakpoint == tab-land{
+        @media (max-width: 75em ){@content}; //1200px
+    }
+    @if $breakpoint == big-desktop{
+        @media (min-width: 112.5em){@content}; //1800px
+    }
+
+}
