--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,7 +10,17 @@
 html{
 
     //this defines what 1 rem is. 
-    font-size: 62.5%;
+    font-size: 62.5%; // 10/16 = 62.5%
+
+    @include respond(tab-land){
+        font-size: 56.25%; //1rem = 9px 9/16 = 56.25%
+    }
+    @include respond(tab-port){
+        font-size: 50%; // 1rem = 8px 8/16 = 50%
+    }
+    @include respond(big-desktop){
+        font-size: 75%; // 1 rem = 12 12/16 = 75%
+    }
 }
 
 body{
